--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "react-folder-tree": "^5.1.1",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^8",
