--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
+    "react-tagsinput": "^3.20.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
