--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tabler/icons-react": "^3.11.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.17",
     "lucide-react": "^0.408.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dnd": "^16.0.1",
@@ -42,6 +43,7 @@
     "react-select": "^5.8.0",
     "react-tagsinput": "^3.20.3",
     "react-toastify": "^10.0.5",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
