--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
-    "cloudinary": "^2.4.0",
+    "@clerk/clerk-sdk-node": "^5.0.23",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.1",
+    "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.4",
