--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "typescript": "5.5.4"
   }
 }
