--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@clerk/clerk-react": "^5.3.1",
     "@clerk/nextjs": "^5.2.12",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@minoru/react-dnd-treeview": "^3.4.4",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +17,7 @@
     "autoprefixer": "^10.4.20",
     "browserify-zlib": "^0.2.0",
     "class-variance-authority": "^0.7.0",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.21",
     "lucide-react": "^0.424.0",
     "next-themes": "^0.3.0",
@@ -23,6 +27,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-tagsinput": "^3.20.3",
     "react-toastify": "^10.0.5",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.4.0",
