--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.4",
+    "svix": "^1.28.0",
     "uuid": "^10.0.0"
   }
 }
