clerk is not working perfact soo i was create login and signup

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^5.0.23",
+    "@clerk/clerk-sdk-node": "^5.0.25",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
