--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.3",
     "browserify-zlib": "^0.2.0",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.3.21",
