--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.3",
     "browserify-zlib": "^0.2.0",
     "class-variance-authority": "^0.7.0",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.21",
     "hoist-non-react-statics": "^3.3.2",
     "html-webpack-plugin": "^5.6.0",
