--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -18,8 +18,9 @@
     "axios": "^1.7.3",
     "browserify-zlib": "^0.2.0",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.10.1",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.3.24",
     "hoist-non-react-statics": "^3.3.2",
     "html-webpack-plugin": "^5.6.0",
     "lucide-react": "^0.424.0",
