--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -10,6 +10,7 @@
     "@minoru/react-dnd-treeview": "^3.4.4",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
