--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -24,6 +24,9 @@
     "framer-motion": "^11.3.24",
     "hoist-non-react-statics": "^3.3.2",
     "html-webpack-plugin": "^5.6.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.424.0",
     "next-themes": "^0.3.0",
     "prop-types": "^15.8.1",
@@ -77,6 +80,7 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4"
   }
 }
