--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -43,6 +43,7 @@
     "react-toastify": "^10.0.5",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.4.0",
+    "throttle-debounce": "^5.0.2",
     "use-sync-external-store": "^1.2.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.93.0",
