--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.1.5",
     "@minoru/react-dnd-treeview": "^3.4.4",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -36,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-is": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
