--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-is": "^18.3.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
