--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.4",
+    "razorpay": "^2.9.4",
     "svix": "^1.28.0",
     "uuid": "^10.0.0"
   }
